--- a/『관광객의 철학』/300 『관광객의 철학』.md
+++ b/『관광객의 철학』/300 『관광객의 철학』.md
@@ -1,6 +1,32 @@
- > [!NOTE] 서지 정보
+ > 서지 정보
  > 저자: [[아즈마 히로키]]
  > 역자: 안천
  > 연도: 2020
  > 출판사: 리시올
- 
+
+### 책 소개  
+
+근대의 태동과 함께 출현한 세계 시민의 이상이 21세기 들어 흔들리고 있다. 배외주의적 정치 세력의 득세, 정치적 올바름에 대한 반발, 세계 각지에서 끊이지 않는 테러리즘. 세계는 새로운 내셔널리즘의 시대로 접어들고 있는 것일까? 그러나 이미 이루어진 지구화를 되돌리는 데는 많은 대가가 따른다. 무엇보다 우리 대부분은 그것을 원하지도 않을 것이다. 우리는 국민과 세계 시민 사이에서 분열되어 있다. 『관광객의 철학』은 이 분열을 넘어서는 정치철학을 모색한다. 이때 관광객은 글로벌리즘과 내셔널리즘 사이에서 분열된 현대 세계를 다시 연결할 수 있는 정치적 주체의 상징이다.  
+  
+『관광객의 철학』은 『동물화하는 포스트모던』 등의 저작을 통해 정보 사회에 관한 독창적인 논점을 제기하며 일약 일본 비평계를 대표하는 인물로 떠올랐던 아즈마 히로키가 현시점에서 지난 20여 년의 작업을 결산하고 새로운 전개를 선언하는 책이다. 그는 이 책에서 칸트와 헤겔, 슈미트와 코제브 그리고 아렌트, 노직과 로티, 네그리와 하트 등 기존 정치철학을 대표하는 이론들을 면밀히 검토하고 또 비판한다. 그리고 이 과정에서 가다듬어진 ‘관광객의 철학’에 도스토옙스키부터 현대 SF에 이르는 문학이 보여 준 전망을 접목시킨다.  
+  
+흔하고 가까운 관광이라는 현상을 오늘날 우리가 처한 철학적 위기를 돌파할 실마리로 삼고 써 내려 간 이 책에는 공리공론을 넘어서는 호소력이 있다. 다방면에 걸쳐 이어져 온 지은이의 작업이 한 권의 책 안에서 유기적으로 맞물리며 하나의 문제의식으로 집약되는 것을 독자들은 직접 확인할 수 있을 것이다.  
+  
+### 목차  
+  
+들어가며  
+  
+**1부 관광객의 철학**  
+	1장 관광  
+	보론  2차 창작  
+	2장 정치와 그 외부  
+	3장  2층 구조  
+	4장 우편적 다중으로  
+  
+**2부 가족의 철학(서론)**  
+	5장 가족  
+	6장 섬뜩함  
+	7장 도스토옙스키의 마지막 주체  
+  
+옮긴이 후기  
+찾아보기
